--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React TypeScript Example</title>
+    <title>Books</title>
   </head>
   <body>
     <div id="root"></div>
-	<script src="./test.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
